# edgeMatching

./: .gitignore  CMakeLists.txt  README.md  build_opencv_with_contrib.sh  inference.cpp  train.cpp
include/: FindTemplateV1.h  MakeTemplateV1.h  ROI.h  Timer.h  Type.h
src/: FindTemplateV1.cpp  MakeTemplateV1.cpp
